[gd_scene load_steps=2 format=3 uid="uid://bry0nmyqohk85"]

[ext_resource type="Script" path="res://hud.gd" id="1_k1i6v"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_k1i6v")

[node name="Panel" type="Panel" parent="."]
offset_left = 1030.0
offset_top = 543.0
offset_right = 1142.0
offset_bottom = 637.0

[node name="BuildButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 107.0
offset_bottom = 38.0
text = "Build
"

[node name="BuildMenu" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 6.0
offset_right = 107.0
offset_bottom = 72.0

[node name="WoodTurretButton" type="Button" parent="Panel/BuildMenu"]
layout_mode = 2
text = "Wood turret"

[node name="StoneTurretButton" type="Button" parent="Panel/BuildMenu"]
layout_mode = 2
text = "Stone turret"
